fix z-index

--- a/front/src/components/shared/filter/Filter.css
+++ b/front/src/components/shared/filter/Filter.css
@@ -1,3 +1,6 @@
+.input-group {
+    z-index: 0 !important;
+}
 .input-group .form-control {
     border: 1px solid var(--color-8);
     /* background: rgba(0, 0, 0, 0.1);
@@ -7,10 +10,8 @@
 .input-group .form-control:focus {
     box-shadow: none !important;
 }
-
 .input-group .btn {
     background-color: var(--color-8);
     border: 1px solid var(--color-8);
     color: var(--main-text-color);
-    z-index: 0 !important;
 }
